--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "happy-dom": "6.0.4",
     "husky": "^8.0.3",
     "prettier": "^2.8.3",
+    "terser": "5.4.0",
     "typescript": "^4.9.4",
     "unocss": "0.45.6",
     "vite": "3.0.7",
