--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "smarty-ui-vite",
-  "version": "1.0.0",
+  "name": "luck-ui",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
